--- a/creative-studio/css/custom.css
+++ b/creative-studio/css/custom.css
@@ -1,1 +1,12 @@
 /*-- Use For Custom Styling --*/
+bg-orange{
+	background-color: orange;
+}
+
+bg-purple{
+	background-color: purple;
+}
+
+bg-red{
+	background-color: red;
+}
